<resources>
    <string name="app_name">My Application</string>

    <!-- Navigation labels (French default) -->
    <string name="nav_home">Accueil</string>
    <string name="nav_login">Login</string>
    <string name="nav_personnel">Personnel</string>
    <string name="nav_demandes">Demandes</string>
    <string name="nav_recrutement">Recrutement</string>
    <string name="nav_notifications">Alertes</string>
    <string name="nav_besoins">Besoins</string>
    <string name="nav_depenses">Dépenses</string>
    <string name="nav_commandes">Commandes</string>
    <string name="nav_profile" translatable="false">Profil</string>
    <string name="nav_budget">Budget</string>
    <string name="nav_recettes">Recettes</string>
    <string name="nav_add_recette">Ajouter Recette</string>

    <!-- Recette form labels -->
    <string name="label_source">Source</string>
    <string name="label_categorie">Catégorie</string>
    <string name="label_montant">Montant (DH)</string>
    <string name="label_date">Date</string>
    <string name="label_description">Description</string>
    <string name="label_reference">Référence Document</string>
    <string name="action_save">Enregistrer</string>
</resources>