<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="ma.ensate.myapplication.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/personnelFragment"
        android:name="ma.ensate.myapplication.PersonnelFragment"
        android:label="@string/nav_personnel" />

    <fragment
        android:id="@+id/demandesFragment"
        android:name="ma.ensate.myapplication.DemandesFragment"
        android:label="@string/nav_demandes" />

    <fragment
        android:id="@+id/recrutementFragment"
        android:name="ma.ensate.myapplication.RecrutementFragment"
        android:label="@string/nav_recrutement" />

    <fragment
        android:id="@+id/recrutementFormFragment"
        android:name="ma.ensate.myapplication.ui.RecrutementFormFragment"
        android:label="Nouveau recrutement" />

    <fragment
        android:id="@+id/candidatureListFragment"
        android:name="ma.ensate.myapplication.ui.CandidatureListFragment"
        android:label="Candidatures">
        <argument
            android:name="recrutementId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/candidatureFormFragment"
        android:name="ma.ensate.myapplication.ui.CandidatureFormFragment"
        android:label="Nouvelle candidature">
        <argument
            android:name="recrutementId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/candidatureDetailFragment"
        android:name="ma.ensate.myapplication.ui.CandidatureDetailFragment"
        android:label="Détails candidature">
        <argument
            android:name="candidatureId"
            app:argType="long" />
    </fragment>

        <fragment
            android:id="@+id/notificationsFragment"
            android:name="ma.ensate.myapplication.NotificationsFragment"
            android:label="@string/nav_notifications" />

        <fragment
            android:id="@+id/besoinsFragment"
            android:name="ma.ensate.myapplication.ui.BesoinListFragment"
            android:label="@string/nav_besoins">
            <action
                android:id="@+id/action_besoinsFragment_to_besoinFormFragment"
                app:destination="@id/besoinFormFragment" />
        </fragment>

        <fragment
            android:id="@+id/besoinFormFragment"
            android:name="ma.ensate.myapplication.ui.BesoinFormFragment"
            android:label="Formulaire Besoin">
            <argument
                android:name="besoinId"
                app:argType="integer"
                android:defaultValue="-1" />
        </fragment>

        <fragment
            android:id="@+id/besoinDetailFragment"
            android:name="ma.ensate.myapplication.ui.BesoinDetailFragment"
            android:label="Détails du Besoin">
            <argument
                android:name="besoinId"
                app:argType="integer"
                android:defaultValue="-1" />
        </fragment>

        <fragment
            android:id="@+id/depensesFragment"
            android:name="ma.ensate.myapplication.ui.DepenseListFragment"
            android:label="@string/nav_depenses" />

        <fragment
            android:id="@+id/commandesFragment"
            android:name="ma.ensate.myapplication.ui.CommandeListFragment"
            android:label="@string/nav_commandes" />

    <fragment
        android:id="@+id/budgetFragment"
        android:name="ma.ensate.myapplication.ui.BudgetFragment"
        android:label="@string/nav_budget" />

    <fragment        android:id="@+id/recettesFragment"
        android:name="ma.ensate.myapplication.ui.RecetteListFragment"
        android:label="@string/nav_recettes" />

    <fragment
        android:id="@+id/addRecetteFragment"
        android:name="ma.ensate.myapplication.ui.AddRecetteFragment"
        android:label="@string/nav_add_recette" />

    <fragment        android:id="@+id/loginFragment"
        android:name="ma.ensate.myapplication.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login"/>



</navigation>
